--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
-  "name": "fua.module.persistence",
+  "name": "@nrd/fua.module.persistence",
   "version": "1.0.0",
   "description": "",
   "main": "src/module.persistence.js",
-  "dependencies": {
-    "rdflib": "^2.1.3",
-    "n3": "^1.7.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "mocha": "^8.2.1",
     "expect": "^26.6.2"
