added @nrd/fua.core.uuid dependency

--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/module.persistence.js",
-  "dependencies": {},
+  "dependencies": {
+    "@nrd/fua.core.uuid": "1.0.0"
+  },
   "devDependencies": {
     "mocha": "^8.2.1",
     "expect": "^26.6.2"
