--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/module.persistence.js",
+  "files": [
+    "src/*"
+  ],
   "dependencies": {
     "@nrd/fua.core.uuid": "1.0.0",
     "@nrd/fua.core.util": "1.0.0"
@@ -25,5 +28,5 @@
   },
   "keywords": [],
   "author": "spetrac@nicos-ag.com",
-  "license": ""
+  "license": "UNLICENSED"
 }
