--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "src/*"
   ],
   "dependencies": {
-    "@nrd/fua.core.uuid": "1.0.0",
-    "@nrd/fua.core.util": "1.0.0"
+    "@nrd/fua.core.uuid": "^1.0.0",
+    "@nrd/fua.core.util": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^8.2.1",
