--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nrd/fua.module.persistence",
+  "name": "@fua/module.persistence",
   "version": "1.0.0",
   "description": "",
   "main": "src/module.persistence.js",
@@ -7,12 +7,12 @@
     "src/*"
   ],
   "dependencies": {
-    "@nrd/fua.core.uuid": "^1.0.0",
-    "@nrd/fua.core.util": "^1.0.0"
+    "@fua/core.uuid": "^1.0.0",
+    "@fua/core.util": "^1.0.0"
   },
   "devDependencies": {
-    "mocha": "^8.2.1",
-    "expect": "^26.6.2"
+    "expect": "26.x",
+    "mocha": "10.x"
   },
   "scripts": {
     "test": "mocha"
@@ -24,9 +24,9 @@
   },
   "repository": {
     "type": "git",
-    "url": "ssh://git@git02.int.nsc.ag:10022/research/fua/module/persistence.git"
+    "url": "ssh://git@github.com:nicosResearchAndDevelopment/fua.module.persistence.git"
   },
   "keywords": [],
-  "author": "spetrac@nicos-ag.com",
-  "license": "UNLICENSED"
+  "author": "Simon Petrac <pfoerdie@gmail.com>",
+  "license": "MIT"
 }
